--- a/figures/parity-test.tex
+++ b/figures/parity-test.tex
@@ -1,6 +1,6 @@
 \begin{figure}[h]
 	\centering
-	\includegraphics[scale=1]{parity-test.png}
+	\includegraphics[scale=1]{figures/multi-parity.png}
 	\label{fig:parity-test}
 	\caption{Parity plots with \glspl{rmse} of (a) 0.098456, (b) 0.050737, (c) 0.099079,  and (d) 0.14963 \SI{}{\J\per\square\m}.}
 \end{figure}
